fix: index valid Hiro swap pages
